examples/test/testpolicy4327.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4327
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key33: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value2
          key16: value49
      podSelector:
        matchLabels:
          key7: value18
          key31: value1
          key47: value46
